--- a/src/App.css
+++ b/src/App.css
@@ -81,11 +81,11 @@ a{
     }
   }
 
-  @media screen and(max-width:700px){
+  @media screen and(max-width:550px){
     .section__padding{
-        padding: 4rem ;
+        padding: 4rem 2rem ;
     }
     .section__margin{
-        margin: 4rem;
+        margin: 4rem 2rem;
     }
   }
